添加第二数据源

--- a/public-server-main/src/main/resources/application.yml
+++ b/public-server-main/src/main/resources/application.yml
@@ -65,3 +65,12 @@ datasources:
       minimum-idle: 2
       maximum-pool-size: 5
       connection-test-query: select 1
+  mid:
+    jdbc-url: jdbc:oracle:thin:@127.0.0.1:1521/orcl
+    driver-class-name: oracle.jdbc.driver.OracleDriver
+    username: mid_aks
+    password: mid_aks
+    hikari:
+      minimum-idle: 2
+      maximum-pool-size: 5
+      connection-test-query: select 1
