--- a/public-server-main/src/main/resources/application.yml
+++ b/public-server-main/src/main/resources/application.yml
@@ -91,7 +91,7 @@ esConfig:
   # es集群的名称
   esClusterName: docker-cluster
   # es的IP
-  esIP: 192.168.237.132
+  esIP: 192.168.12.128
   # es的port
   esPort: 9300
   # es数据库公司的索引
@@ -109,7 +109,7 @@ standplatConfig:
     showNum: 3
   bvdfToEsSchedule:
     # 是否启用bvdfToEs定时任务 Y启用，N不启用
-    isEnable: Y
+    isEnable: N
     # 定时时间 每隔5分钟执行一次
     cornTime: 0 0/5 * * * ?
     # 房屋信息表(arc_houseinfo)最大查询条数,防止内存溢出
