--- a/public-server-main/src/main/resources/application.yml
+++ b/public-server-main/src/main/resources/application.yml
@@ -95,6 +95,8 @@ esConfig:
 standplatConfig:
   # 是否启用完全匹配 Y启用，N不启用
   isAllMatchEnable: Y
+  # 疑似匹配的条数
+  unCertainSize: 5
   unCertain:
     # 疑似匹配展示的条数
     showNum: 3
