自然幢往es推送添加小区名称和开发企业名称

--- a/public-server-main/src/main/resources/application.yml
+++ b/public-server-main/src/main/resources/application.yml
@@ -93,10 +93,14 @@ esConfig:
   regionindex: region_index
   # es数据库小区的映射
   regiontype: region_type
-  # es数据库小区的索引
+  # es数据库自然幢的索引
   bldindex: bld_index
-  # es数据库小区的映射
+  # es数据库自然幢的映射
   bldtype: bld_type
+  # es数据库房屋的索引
+  houseindex: house_index
+  # es数据库房屋的映射
+  housetype: house_type
 
 
 
@@ -121,6 +125,9 @@ standplatConfig:
     # 定时时间 每隔5分钟执行一次,cornTime为“-”是停止定时
     cronTime: 0/5 * * * * ?
   bldToEsSchedule:
+    # 定时时间 每隔5分钟执行一次,cornTime为“-”是停止定时
+    cronTime: 0/5 * * * * ?
+  houseToEsSchedule:
     # 定时时间 每隔5分钟执行一次,cornTime为“-”是停止定时
     cronTime: 0/5 * * * * ?
 
